[metadata]
name = aioslack
version = 0.0.1
author = Omar Abou Mrad
author-email = omaraboumrad@gmail.com
summary = asyncio powered slack client
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    aioslack
